Continuacao projeto-gamer

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <header>
 
         <div class="header-top">
-            <div class="contatos">
+            <div class="layout-grid">
+                <div class="contatos">
                 <div class="phone">
                     <img src="../Gamer/assets/icons/call_FILL0_wght400_GRAD0_opsz48.svg" alt="icone de telefone">
                     <span>(11) 0900-1010</span>
@@ -21,9 +22,9 @@
                     <img src="../Gamer/assets/icons/mail_FILL0_wght400_GRAD0_opsz48.svg" alt="icone do e-mail">
                     <span>contato@gamer.com.br</span>
                 </div>
-            </div>
+                </div>
 
-            <div class="midias-sociais">
+                <div class="midias-sociais">
                 <a href="">
                     <img src="../Gamer/assets/icons/Facebook.svg" alt="imagem link do facebook da empresa">
                 </a>
@@ -35,10 +36,12 @@
                 </a>
 
 
+                </div>
             </div>
         </div>
         
         <div class="header-bottom">
+            <div class="layout-grid alinhamento-between-center">
             <!-- menu mobile -->
             <img src="../Gamer/assets/icons/menu_FILL0_wght400_GRAD0_opsz48.svg" class="menu-hamburguer" alt="icone para abrir e fechar menu mobile">
             <img class="logo" src="../Gamer/assets/images/logotipo-gamer.png" alt="logotipo da empresa. Texto gamer com joystick ao centro">
@@ -74,11 +77,7 @@
                 <a href="">
                     <img src="../Gamer/assets/icons/search_FILL0_wght400_GRAD0_opsz48.svg" alt="icone de buscas">
                 </a>
-
-                
-
-
-
+            </div>
             </div>
         </div>
     </header>
