--- a/fundo-gradiente.html
+++ b/fundo-gradiente.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -27,12 +26,6 @@
             color: white;
         }
 
-        .borda-gradiente {
-            background-image: linear-gradient(to right bottom, white, rgba(27, 20, 38, 0));
-            padding: 1px;
-            border-radius: 8px;
-        }
-
         article {
             width: 300px;
             height: 300px;
@@ -40,31 +33,21 @@
             border: 1px solid white;
             border-radius: 8px;
             overflow: auto;
-            background-color: rgb(115, 0, 115);
-            background-image: linear-gradient(to right bottom, rgba(115, 0, 115, 1), rgba(236, 56, 236, 0.3));
+            background-color: rgba(115, 0, 115, 0.8);
+            background-image: linear-gradient();
+            
         }
 
         h1 {
             margin-bottom: 20px;
         }
 
-        
     </style>
 </head>
-
 <body>
-    <div class="borda-gradiente">
-        <article>
-            <h1>The box</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius minima ducimus facilis illum perferendis
-                nobis saepe dolore possimus, repellendus, consequatur dolor iusto cumque, laboriosam ex. Vero adipisci
-                doloremque qui ab?. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia sequi tempore,
-                consequatur, nemo soluta dolorem veritatis hic non asperiores fuga provident sed nisi magni doloremque
-                pariatur, esse sapiente. Obcaecati, totam!</p>
-        </article>
-    </div>
-
-
+    <article>
+        <h1>The box</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius minima ducimus facilis illum perferendis nobis saepe dolore possimus, repellendus, consequatur dolor iusto cumque, laboriosam ex. Vero adipisci doloremque qui ab?. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia sequi tempore, consequatur, nemo soluta dolorem veritatis hic non asperiores fuga provident sed nisi magni doloremque pariatur, esse sapiente. Obcaecati, totam!</p>
+    </article>
 </body>
-
 </html>
