--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 <body>
     <header>
 
+        <!-- LINHA DE CIMA COM A BORDA AMARELA -->
         <div class="header-top">
-            <div class="layout-grid flex">
+
+            <div class="layout-grid alinhamento-between-center">
                 <div class="contacts">
                     <div class="phone">
                         <img src="./assets/icons/call.png" alt="Ícone do telefone">
