--- a/Login.html
+++ b/Login.html
@@ -101,6 +101,8 @@
         </div>
     </header>
 
+
+    <!-- Banner Login -->
     <main>
         <section class="login">
             <h1>Login</h1>
